<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".activity.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingTop="100dp"
            android:gravity="center_horizontal">

            <!-- Imagen Avatar -->
            <ImageView
                android:id="@+id/imagenAvatar"
                android:layout_width="172dp"
                android:layout_height="176dp"
                android:src="@drawable/avatar"
                android:layout_marginBottom="24dp" />

            <!-- TextInputLayout: Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuari"
                    android:textColor="#A6003D"
                    android:fontFamily="@font/oswald_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout: Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="#A6003D"
                    android:fontFamily="@font/oswald_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout: Edad -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edat"
                    android:textColor="#A6003D"
                    android:fontFamily="@font/oswald_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout: Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputContrasenya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasenya"
                    android:textColor="#A6003D"
                    android:fontFamily="@font/oswald_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout: Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputContrasenyaDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/segundaContrasenya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasenya2"
                    android:textColor="#A6003D"
                    android:fontFamily="@font/oswald_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón de Registro -->
            <Button
                android:id="@+id/buttonRegistre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registre"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
